WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151792
REGRESSION(
r192753
): Remote Web Inspector: Enabling Remote Inspection on Auto Inspect candidate Debuggable doesn't show up in debuggers
https://bugs.webkit.org/show_bug.cgi?id=151792
Summary
REGRESSION(r192753): Remote Web Inspector: Enabling Remote Inspection on Auto...
Joseph Pecoraro
Reported
2015-12-02 21:05:26 PST
* SUMMARY Remote Web Inspector: Allowing Remote Inspection on a Debuggable doesn't make it appear * STEPS TO REPRODUCE 1. Start Application 1.1: JSRemoteInspectorSetInspectionEnabledByDefault(false); 1.2: Create a JSContext 1.3: -[JSContext _setRemoteInspectionEnabled:YES] 2. Launch Safari => Develop menu doesn't show the JSContext * NOTES - Probably also happens if you just toggle RemoteInspectionEnabled NO then YES. - RemoteInspector::updateAutomaticInspectionCandidate should be identical to RemoteInspector::updateTarget and create the listing if it didn't exist.
Attachments
[PATCH] Proposed Fix
(2.05 KB, patch)
2015-12-02 21:07 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-12-02 21:05:59 PST
<
rdar://problem/23737525
>
Joseph Pecoraro
Comment 2
2015-12-02 21:07:48 PST
Created
attachment 266509
[details]
[PATCH] Proposed Fix
Blaze Burg
Comment 3
2015-12-03 10:11:28 PST
Comment on
attachment 266509
[details]
[PATCH] Proposed Fix r=me
WebKit Commit Bot
Comment 4
2015-12-03 10:56:09 PST
Comment on
attachment 266509
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 266509 Committed
r193188
: <
http://trac.webkit.org/changeset/193188
>
WebKit Commit Bot
Comment 5
2015-12-03 10:56:11 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug